Fix table clipped

--- a/style.css
+++ b/style.css
@@ -43,12 +43,11 @@ body {
 }
 
 .main-table {
-  width: auto;
+  width: 100%;
 }
 
 .table-container {
   display: flex;
-  justify-content: center;
   width: 100%;
   overflow-x: auto;
   min-height: fit-content;
